--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,41 @@
-<h1>Welcome!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Title</title>
+</head>
+<body>
+<div>
+    <h1>Home Page</h1>
+
+    <ul>
+        <li>
+            <a href="./login/login.template.client.html">
+                Login Screen
+            </a>
+        </li>
+
+        <li>
+            <a href="./profile/profile.template.client.html">
+                Profile Screen
+            </a>
+        </li>
+
+        <li>
+            <a href="./dashboard/dashboard-table.html">
+                Course Dashboard
+            </a>
+        </li>
+        <li>
+            <a href="./editor/editor.html">
+                Course Editor
+            </a>
+        </li>
+
+    </ul>
+
+
+</div>
+</body>
+</html>
