--- a/src/main/webapp/dashboard/dashboard-table.html
+++ b/src/main/webapp/dashboard/dashboard-table.html
@@ -26,24 +26,33 @@
     </div>
 </nav>
 <nav class="navbar sticky-top navbar-light bg-light">
-    <div class="col-3">
-        Title
-    </div>
-    <div class="col-3 owner-col">
-        Owned by
-        <i class="fa fa-sort-up"></i>
-    </div>
-    <div class="col-5 modified-col">
-        Last modified
-    </div>
-    <div class="col-1">
-        <i class="fa fa-th"></i>
-        <i class="fa fa-sort"></i>
+    <div class="container">
+        <table class="table table-hover">
+        <tbody>
+        <tr>
+            <th class="title-title">
+                Title
+            </th>
+            <th class="owner-col owner-title">
+                Owned by
+                <i class="fa fa-sort-up"></i>
+            </th>
+            <th class="modified-col">
+                Last modified
+            </th>
+            <th class="col-1 float-right operation-title">
+                <i class="fa fa-th"></i>
+                <i class="fa fa-sort"></i>
+            </th>
+        </tr>
+        </tbody>
+    </table>
     </div>
 </nav>
 <br>
 <br>
 <div class="container">
+    <h3>Today</h3>
     <table class="table table-striped">
         <tbody>
         <tr>
