--- a/src/main/webapp/dashboard/dashboard-table.html
+++ b/src/main/webapp/dashboard/dashboard-table.html
@@ -6,7 +6,7 @@
     <link href="./dashboard-table.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dashboard</title>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-primary">
