--- a/src/main/webapp/profile/profile.template.client.html
+++ b/src/main/webapp/profile/profile.template.client.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Profile</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../styles.css" rel="stylesheet">
     <link href="./profile.style.client.css" rel="stylesheet"/>
