--- a/src/main/webapp/dashboard/dashboard-table.html
+++ b/src/main/webapp/dashboard/dashboard-table.html
@@ -25,28 +25,31 @@
         </a>
     </div>
 </nav>
-<nav class="navbar sticky-top navbar-light bg-light">
+<nav class="navbar navbar-expand-lg bg-light sticky-top">
     <div class="container">
-        <table class="table table-hover">
-        <tbody>
-        <tr>
-            <th class="title-title">
-                Title
-            </th>
-            <th class="owner-col owner-title">
-                Owned by
-                <i class="fa fa-sort-up"></i>
-            </th>
-            <th class="modified-col">
-                Last modified
-            </th>
-            <th class="col-1 float-right operation-title">
-                <i class="fa fa-th"></i>
-                <i class="fa fa-sort"></i>
-            </th>
-        </tr>
-        </tbody>
-    </table>
+        <div class="col mx-auto">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th class="navbar-title">
+                        Title
+                    </th>
+                    <th class="owner-col navbar-owner">
+                        Owned By
+                    </th>
+                    <th class="modified-col navbar-modifier">
+                        Last modified by me
+                    </th>
+                    <th class="navbar-icons">
+                        <a href="#" class="navbar-icon">
+                            <i class="fa fa-th"></i>
+                            <i class="fa fa-sort"></i>
+                        </a>
+                    </th>
+                </tr>
+                </thead>
+            </table>
+        </div>
     </div>
 </nav>
 <br>
