--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,6 +32,11 @@
                 Course Editor
             </a>
         </li>
+        <li>
+            <a href="./course-list/course-list.html">
+                Course List
+            </a>
+        </li>
 
     </ul>
 
