create all course list files

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,7 +33,7 @@
             </a>
         </li>
         <li>
-            <a href="./course-list/course-list.html">
+            <a href="courses/course-list.template.client.html">
                 Course List
             </a>
         </li>
