--- a/src/main/webapp/admin/user-admin.template.client.html
+++ b/src/main/webapp/admin/user-admin.template.client.html
@@ -11,8 +11,8 @@
     <script
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../services/user.service.client.js"></script>
-    <script src="user-admin.component.client.js"></script>
-    <link href="../styles/styles.css" rel="stylesheet"/>
+    <script src="user-admin.controller.client.js"></script>
+    <link href="../styles.css" rel="stylesheet"/>
 </head>
 <body>
 
