--- a/src/main/webapp/courses/course-list.template.client.html
+++ b/src/main/webapp/courses/course-list.template.client.html
@@ -2,7 +2,7 @@
 <head>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           rel="stylesheet"/>
-    <link href="../styles/styles.css"
+    <link href="../styles.css"
           rel="stylesheet"/>
     <link href="course-list.style.client.css"
           rel="stylesheet"/>
