--- a/src/main/webapp/admin/user-admin.template.client.html
+++ b/src/main/webapp/admin/user-admin.template.client.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <title>User Admin</title>
     <link rel="stylesheet" href=
-            "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href=
-            "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <!--<link href="user-admin.style.client.css" rel="stylesheet" />-->
-    <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+          crossorigin="anonymous"/>
+    <link href="user-admin.style.client.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
     <script src="../services/user.service.client.js"></script>
     <script src="user-admin.controller.client.js"></script>
-    <link href="../styles.css" rel="stylesheet"/>
 </head>
 <body>
 
