--- a/src/main/webapp/courses/course-list.template.client.html
+++ b/src/main/webapp/courses/course-list.template.client.html
@@ -6,6 +6,10 @@
           rel="stylesheet"/>
     <link href="course-list.style.client.css"
           rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <script src="course.list.controller.client.js"></script>
 </head>
 <body>
 <div class="container">
