--- a/src/main/webapp/admin/user-admin.template.client.html
+++ b/src/main/webapp/admin/user-admin.template.client.html
@@ -9,11 +9,7 @@
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
           crossorigin="anonymous"/>
     <link href="user-admin.style.client.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"></script>
-    <script src="../services/user.service.client.js"></script>
-    <script src="user-admin.controller.client.js"></script>
+
 </head>
 <body>
 
@@ -45,13 +41,20 @@
                 <option value="STUDENT">Student</option>
                 <option value="ADMIN">Admin</option>
             </select></td>
-            <td><span
-                    class="float-right"
-                    style="white-space: nowrap">
-                <i class="fa-2x fa fa-search wbdv-search"></i> <i
-                    class="fa-2x fa fa-plus wbdv-create"></i> <i
-                    class="fa-2x fa fa-check wbdv-update"></i>
-                    </span></td>
+            <td>
+                <span class="float-right"
+                      style="white-space: nowrap">
+                    <button class="wbdv-btn">
+                        <i class="fa-2x fa fa-search wbdv-search"></i>
+                    </button>
+                     <button class="wbdv-btn">
+                         <i class="fa-2x fa fa-plus wbdv-create"></i>
+                     </button>
+                    <button class="wbdv-btn">
+                        <i class="fa-2x fa fa-check wbdv-update"></i>
+                    </button>
+                </span>
+            </td>
         </tr>
 
         <tr class="wbdv-template wbdv-user wbdv-hidden">
@@ -62,8 +65,12 @@
             <td class="wbdv-role">FACULTY</td>
             <td class="wbdv-actions">
                 <span class="float-right">
-                  <i id="wbdv-remove" class="fa-2x fa fa-times wbdv-remove"></i>
-                  <i id="wbdv-edit" class="fa-2x fa fa-pencil wbdv-edit"></i>
+                    <button class="wbdv-btn">
+                        <i id="wbdv-remove" class="fa-2x fa fa-times"></i>
+                    </button>
+                    <button class="wbdv-btn">
+                        <i id="wbdv-edit" class="fa-2x fa fa-pencil wbdv-edit"></i>
+                    </button>
                 </span>
             </td>
         </tr>
@@ -81,4 +88,11 @@
     </table>
 
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
+<script src="../services/user.service.client.js"></script>
+<script src="user-admin.controller.client.js"></script>
+
 </body>
