--- a/src/main/webapp/admin/user-admin.template.client.html
+++ b/src/main/webapp/admin/user-admin.template.client.html
@@ -59,7 +59,7 @@
 
         <tr class="wbdv-template wbdv-user wbdv-hidden">
             <td class="wbdv-username">ada</td>
-            <td>&nbsp;</td>
+            <td type="password">&nbsp;</td>
             <td class="wbdv-first-name">Ada</td>
             <td class="wbdv-last-name">Lovelace</td>
             <td class="wbdv-role">FACULTY</td>
