--- a/src/main/webapp/admin/user-admin.template.client.html
+++ b/src/main/webapp/admin/user-admin.template.client.html
@@ -10,6 +10,13 @@
           crossorigin="anonymous"/>
     <link href="user-admin.style.client.css" rel="stylesheet" />
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"></script>
+    <script src="../services/user.service.client.js"></script>
+    <script src="user-admin.controller.client.js"></script>
+
+
 </head>
 <body>
 
@@ -28,15 +35,15 @@
         </tr>
 
         <tr class="wbdv-form">
-            <td><input id="usernameFld" class="form-control"
+            <td><input class="form-control wbdv-usernameFld"
                        placeholder="Username" /></td>
-            <td><input id="passwordFld" class="form-control"
+            <td><input class="form-control wbdv-passwordFld"
                        placeholder="Password" /></td>
-            <td><input id="firstNameFld" class="form-control"
+            <td><input class="form-control wbdv-firstNameFld"
                        placeholder="First Name" /></td>
-            <td><input id="lastNameFld" class="form-control"
+            <td><input class="form-control wbdv-lastNameFld"
                        placeholder="Last Name" /></td>
-            <td><select id="roleFld" class="form-control">
+            <td><select class="form-control wbdv-roleFld">
                 <option value="FACULTY">Faculty</option>
                 <option value="STUDENT">Student</option>
                 <option value="ADMIN">Admin</option>
@@ -44,55 +51,41 @@
             <td>
                 <span class="float-right"
                       style="white-space: nowrap">
-                    <button class="wbdv-btn">
-                        <i class="fa-2x fa fa-search wbdv-search"></i>
+                    <button class="wbdv-btn wbdv-search">
+                        <i class="fa-2x fa fa-search"></i>
                     </button>
-                     <button class="wbdv-btn">
-                         <i class="fa-2x fa fa-plus wbdv-create"></i>
+                     <button class="wbdv-btn wbdv-create">
+                         <i class="fa-2x fa fa-plus"></i>
                      </button>
-                    <button class="wbdv-btn">
-                        <i class="fa-2x fa fa-check wbdv-update"></i>
+                    <button class="wbdv-btn wbdv-update">
+                        <i class="fa-2x fa fa-check"></i>
                     </button>
                 </span>
             </td>
         </tr>
-
-        <tr class="wbdv-template wbdv-user wbdv-hidden">
-            <td class="wbdv-username">ada</td>
-            <td type="password">&nbsp;</td>
-            <td class="wbdv-first-name">Ada</td>
-            <td class="wbdv-last-name">Lovelace</td>
-            <td class="wbdv-role">FACULTY</td>
-            <td class="wbdv-actions">
-                <span class="float-right">
-                    <button class="wbdv-btn">
-                        <i id="wbdv-remove" class="fa-2x fa fa-times"></i>
-                    </button>
-                    <button class="wbdv-btn">
-                        <i id="wbdv-edit" class="fa-2x fa fa-pencil wbdv-edit"></i>
-                    </button>
-                </span>
-            </td>
-        </tr>
-
-
         </thead>
-
-        <tbody class="wbdv-tbody">
-
+        <tbody>
+<!--        <tr class="wbdv-template wbdv-user wbdv-hidden">-->
+<!--            <td class="wbdv-username">ada</td>-->
+<!--            <td type="password">&nbsp;</td>-->
+<!--            <td class="wbdv-first-name">Ada</td>-->
+<!--            <td class="wbdv-last-name">Lovelace</td>-->
+<!--            <td class="wbdv-role">FACULTY</td>-->
+<!--            <td class="wbdv-actions">-->
+<!--                <span class="float-right">-->
+<!--                    <button class="wbdv-btn">-->
+<!--                        <i class="fa-2x fa fa-times wbdv-remove"></i>-->
+<!--                    </button>-->
+<!--                    <button class="wbdv-btn">-->
+<!--                        <i class="fa-2x fa fa-pencil wbdv-select wbdv-select"></i>-->
+<!--                    </button>-->
+<!--                </span>-->
+<!--            </td>-->
+<!--        </tr>-->
         </tbody>
-    </table>
-
-
-
     </table>
 
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"></script>
-<script src="../services/user.service.client.js"></script>
-<script src="user-admin.controller.client.js"></script>
 
 </body>
