add user admin on Home page & update user admin

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,11 @@
                 Course List
             </a>
         </li>
-
+        <li>
+            <a href="user-admin.template.client.html">
+                User Admin
+            </a>
+        </li>
     </ul>
 
 
