fix bug on Home page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,7 +38,7 @@
             </a>
         </li>
         <li>
-            <a href="user-admin.template.client.html">
+            <a href="admin/user-admin.template.client.html">
                 User Admin
             </a>
         </li>
